pkg/config/analysis/analyzers/testdata/serviceentry-no-conflict-protocol.yaml
apiVersion: networking.istio.io/v1
kind: ServiceEntry
metadata:
  name: se-https-only
  namespace: default
spec:
  hosts:
  - example.com
  ports:
  - name: https-443
    number: 443
    protocol: HTTPS
  resolution: DNS
  location: MESH_EXTERNAL
---
apiVersion: networking.istio.io/v1
kind: ServiceEntry
metadata:
  name: se-https-only-2
  namespace: default
spec:
  hosts:
  - example.com
  ports:
  - name: https-443-2
    number: 443
    protocol: HTTPS
  resolution: DNS
  location: MESH_EXTERNAL
